Add custom UnresolvableProtobufMessageException message in MESSAGE_NOT_SET